// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@hendotcat/elements <DescriptionList /> renders a list of links with descriptions 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
  </head>
  <body>
    <dl>
      <dt><a href=\\"https://example.org/\\">link</a></dt>
      <dd><span>an example website</span></dd>
    </dl>
  </body>
</html>
"
`;

exports[`@hendotcat/elements <Document /> renders <Body> children as body contents 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements <Document /> renders a valid document given the bare minimum input 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
  </head>
  <body></body>
</html>
"
`;

exports[`@hendotcat/elements <Document /> renders custom header metadata 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
    <meta property=\\"og:title\\" content=\\"test\\">
  </head>
  <body></body>
</html>
"
`;

exports[`@hendotcat/elements <Document /> treats bare children as body contents 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements <H1 /> renders a <h1> 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements <Heading /> allows heading level changes of up to 1 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
  </head>
  <body>
    <h1>one</h1>
    <h2>two</h2>
    <h3>three</h3>
    <h4>four</h4>
    <h5>five</h5>
    <h6>six</h6>
    <h5>five</h5>
    <h4>four</h4>
    <h3>three</h3>
    <h2>two</h2>
    <h1>one</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements <Heading /> rejects heading level changes of more than 1 1`] = `"Heading level 3 not allowed: previous level is 1"`;

exports[`@hendotcat/elements <Heading /> renders a <h1> by default 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta name=\\"description\\" content=\\"testing\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;
